# emma-office-local

./: README.md  pyproject.toml  requirements.txt
src/: emma_v1.py
tests/: conftest.py  test_emma_v1.py
