[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emma-office-local"
version = "0.1.0"
description = "PoC: DeepSeek R1 locally served via Ollama, orchestrated with LangChain & telemetry tracking"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",          # Fast Python linter/formatter
    "pytest>=8.0.0",        # Unit testing
]

# Optional: IDE & linting configuration (auto-detected by ruff/mypy)
[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # pycodestyle, pyflakes, pydocstyle, isort
ignore = ["E501"]               # Allow longer lines for PoC readability

[tool.pytest.ini_options]
testpaths = ["tests"]